src/objects/BR_Participation__c.object
<CustomObject>

    <fields>
        <fullName>BR_Event__c</fullName>
        <label>BR Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipName>BR_Participations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <formula>BR_Event__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Participate__c</fullName>
        <label>Participate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TriggerSendReminderWorkflow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TriggerSendReminderWorkflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BR_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AC Participation</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>